<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:background="@drawable/app_shape_round_rect_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textColor="@color/base_black"
        android:textSize="@dimen/base_text_xxhlarge"
        android:text="@string/app_backup_and_recovery" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/app_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false" />

    <LinearLayout
        android:id="@+id/app_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:visibility="visible">

        <CheckBox
            android:id="@+id/app_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:button="@drawable/app_sel_main_select"
            android:background="@null"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="@dimen/base_text_large"
            android:textColor="@color/base_black"
            android:text="@string/app_select_all" />

    </LinearLayout>

    <Button
        android:id="@+id/app_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/app_bg_round_red_ripple"
        android:text="@string/app_backup"
        android:textColor="@color/base_white"
        android:textSize="@dimen/base_text_large"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/app_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:background="@drawable/app_bg_round_white_ripple"
        android:text="@string/app_recovery"
        android:textColor="@color/app_color_accent"
        android:textSize="@dimen/base_text_large"
        style="?android:attr/borderlessButtonStyle" />

</LinearLayout>