<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_tv_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="@dimen/base_text_large"
            android:textColor="@color/base_black"
            android:background="?selectableItemBackground"
            android:textStyle="bold"
            android:text="@string/app_import"
            android:drawableStart="@drawable/app_ic_action_import_black"
            android:drawablePadding="16dp"/>

        <TextView
            android:id="@+id/app_tv_backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="@dimen/base_text_large"
            android:textColor="@color/base_black"
            android:background="?selectableItemBackground"
            android:textStyle="bold"
            android:text="@string/app_backup"
            android:visibility="gone"
            android:drawableStart="@drawable/app_ic_import_export_black_24dp"
            android:drawablePadding="16dp" />

        <TextView
            android:id="@+id/app_tv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="@dimen/base_text_large"
            android:textColor="@color/base_black"
            android:background="?selectableItemBackground"
            android:textStyle="bold"
            android:text="@string/app_settings"
            android:drawableStart="@drawable/app_ic_action_settings_black"
            android:drawablePadding="16dp"/>

        <TextView
            android:id="@+id/app_tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="@dimen/base_text_large"
            android:textColor="@color/base_black"
            android:background="?selectableItemBackground"
            android:textStyle="bold"
            android:text="@string/app_about"
            android:drawableStart="@drawable/app_ic_action_about_black"
            android:drawablePadding="16dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>